# release-assistant-mcp

./: .gitignore  .yamllint  CLAUDE.md  Containerfile  README.md  config.yaml  pyproject.toml
.github/: renovate.json
.github/scripts/: container-test.sh
.github/workflows/: ci.yaml
.tekton/: sconroy-release-assistant-mcp-pull-request.yaml  sconroy-release-assistant-mcp-push.yaml
pipelines/: push-to-quay.yaml
scripts/: clone_repos.py  crawl-docs.py
src/release_mcp/: config.py  indexer.py  models.py  server.py
src/release_mcp/prompts/: templates.py
src/release_mcp/resources/: docs.py
src/release_mcp/tools/: docs.py  ops.py  pipeline.py  search.py  task.py  testing.py  validate.py
tests/: conftest.py  test_docs.py  test_indexer.py  test_tools.py  test_urls.py
tests/fixtures/: sample-pipeline.yaml  sample-schema.json  sample-task.yaml
